# spruceOS-Installer

./: .gitignore  Cargo.toml  README.md  app.manifest  app.rc  build-mac-app.sh  build.rs  manifest-example.json
.github/workflows/: build-all.yml  build-linux-32bit.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release-latest.yml
assets/Linux-armv7/: 7zzs
assets/Linux-i686/: 7zzs
assets/Mac/: Info.plist
src/: app.rs  burn.rs  config.rs  copy.rs  debug.rs  delete.rs  download_state.rs  drives.rs  eject.rs  extract.rs  fat32.rs  format.rs  github.rs  main.rs  manifest.rs
src/app/: logic.rs  mod.rs  state.rs  theme.rs  ui.rs
src/mac/: authopen.rs  clipboard.rs  direct_open.rs  diskarb.rs  mod.rs
