[package]
name = "spruceos-installer"
version = "1.0.0"
edition = "2021"
description = "SpruceOS SD Card Installer"
authors = ["SpruceOS Team"]

[features]
default = []
icon = ["image"]

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sevenz-rust = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dirs = "5"
tempfile = "3"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
