[package]
name = "spruceos-installer"
version = "1.0.0"
edition = "2021"
description = "SpruceOS SD Card Installer"
authors = ["SpruceOS Team", "NextUI Team"]
license = "GPL-3.0-or-later"

[features]
default = []
icon = ["image"]

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui-thematic = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "sync", "time", "io-util", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sevenz-rust = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-util = "0.7"
dirs = "5"
tempfile = "3"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
lazy_static = "1.4"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"

